# opencv-test-deleteme

./: .gitignore  CMakeLists.txt  makefile
src/: main.cpp
